ArgoCD/argocd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-service
  namespace: argocd
spec:
  selector:
    app.kubernetes.io/name: argocd-server-service
    app.kubernetes.io/instance: argocd-server-service
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
