ArgoCD/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
#    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
#    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: argocd.cube.local
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: argocd-lb
              port:
                number: 80
